@@ -3,37 +3,33 @@
 !_TAG_PROGRAM_AUTHOR	Darren Hiebert	/dhiebert@users.sourceforge.net/
 !_TAG_PROGRAM_NAME	Exuberant Ctags	//
 !_TAG_PROGRAM_URL	http://ctags.sourceforge.net	/official site/
-!_TAG_PROGRAM_VERSION	5.6	//
-BAD_GET	t/autolint.t	/^BAD_GET: {$/;"	l
-BAD_GET	t/back_ok.t	/^BAD_GET: {$/;"	l
+!_TAG_PROGRAM_VERSION	5.8	//
+ACCESSOR	t/autolint.t	/^    ACCESSOR: {$/;"	l
+ACCESSOR_MUTATOR	t/autolint.t	/^ACCESSOR_MUTATOR: {$/;"	l
+BAD	t/lacks_uncapped_inputs.t	/^BAD: {$/;"	l
 BAD_GET	t/get_ok.t	/^BAD_GET: {$/;"	l
 CONSTRUCTOR_PARMS	t/new.t	/^CONSTRUCTOR_PARMS: {$/;"	l
-CUSTOM_FILL	t/stuff_inputs.t	/^CUSTOM_FILL: {$/;"	l
-Carp	Mechanize.pm	/^       Carp::croak 'FATAL: parameters must be given as a hashref';$/;"	l
-EMPTY_FIELDS	t/stuff_inputs.t	/^EMPTY_FIELDS: {$/;"	l
+CUSTOM_FILL	t/stuff_inputs.t	/^    CUSTOM_FILL: {$/;"	l
+CUSTOM_LINTER	t/autolint.t	/^CUSTOM_LINTER: {$/;"	l
+EMPTY_FIELDS	t/stuff_inputs.t	/^    EMPTY_FIELDS: {$/;"	l
 FOLLOW_BAD_LINK	t/follow_link_ok.t	/^FOLLOW_BAD_LINK: {$/;"	l
 FOLLOW_GOOD_LINK	t/follow_link_ok.t	/^FOLLOW_GOOD_LINK: {$/;"	l
+GOOD	t/lacks_uncapped_inputs.t	/^GOOD: {$/;"	l
 GOOD_GET	hanger	/^GOOD_GET: {$/;"	l
-GOOD_GET	t/back_ok.t	/^GOOD_GET: {$/;"	l
 GOOD_GET	t/get_ok.t	/^GOOD_GET: {$/;"	l
 GOOD_GET	t/html_lint_ok.t	/^GOOD_GET: {$/;"	l
 GOOD_GET_BAD_HTML	t/autolint.t	/^GOOD_GET_BAD_HTML: {$/;"	l
 GOOD_GET_GOOD_HTML	t/autolint.t	/^GOOD_GET_GOOD_HTML: {$/;"	l
 GOOD_HEAD	t/head_ok.t	/^GOOD_HEAD: { # Stop giggling, you!$/;"	l
 GOOD_PUT	t/put_ok.t	/^GOOD_PUT: {$/;"	l
-HTML	t/stuff_inputs.t	/^    HTML::Form::Input->new( type=>'text', name=>'text0', maxlength=>0 )->add_to_form( $mech->current_form() );$/;"	l
-HTML	t/stuff_inputs.t	/^    HTML::Form::Input->new( type=>'text', name=>'text1', maxlength=>1 )->add_to_form( $mech->current_form() );$/;"	l
-HTML	t/stuff_inputs.t	/^    HTML::Form::Input->new( type=>'text', name=>'text10', maxlength=>10 )->add_to_form( $mech->current_form() );$/;"	l
-HTML	t/stuff_inputs.t	/^    HTML::Form::Input->new( type=>'text', name=>'text70k', maxlength=>70_000 )->add_to_form( $mech->current_form() );$/;"	l
-HTML	t/stuff_inputs.t	/^    HTML::Form::Input->new( type=>'text', name=>'textunlimited' )->add_to_form( $mech->current_form() );$/;"	l
-HTML	t/stuff_inputs.t	/^    HTML::Form::Input->new( type=>'textarea', name=>'textarea' )->add_to_form( $mech->current_form() );$/;"	l
-IGNORE	t/stuff_inputs.t	/^IGNORE: {$/;"	l
-MAXLENGTH	t/stuff_inputs.t	/^MAXLENGTH: {$/;"	l
-MULTICHAR_FILL	t/stuff_inputs.t	/^MULTICHAR_FILL: {$/;"	l
+HangServer	hanger	/^package HangServer;$/;"	p
+IGNORE	t/stuff_inputs.t	/^    IGNORE: {$/;"	l
+MAIN	t/stuff_inputs.t	/^MAIN: {$/;"	l
+MAXLENGTH	t/stuff_inputs.t	/^    MAXLENGTH: {$/;"	l
+MULTICHAR_FILL	t/stuff_inputs.t	/^    MULTICHAR_FILL: {$/;"	l
+MUTATOR	t/autolint.t	/^    MUTATOR: {$/;"	l
 NEW	t/new.t	/^NEW: {$/;"	l
-NONEXISTENT	t/back_ok.t	/^use constant NONEXISTENT => 'http:\/\/blahblablah.xx-nonexistent.';$/;"	c
-NONEXISTENT	t/get_ok.t	/^use constant NONEXISTENT => 'http:\/\/blahblablah.xx-nonexistent.';$/;"	c
-OVERWRITE	t/stuff_inputs.t	/^OVERWRITE: {$/;"	l
+OVERWRITE	t/stuff_inputs.t	/^    OVERWRITE: {$/;"	l
 SKIP	t/head_ok.t	/^SKIP: {$/;"	l
 SUBMIT_GOOD_FORM	t/click_ok.t	/^SUBMIT_GOOD_FORM: {$/;"	l
 SUBMIT_GOOD_FORM	t/submit_form_ok.t	/^SUBMIT_GOOD_FORM: {$/;"	l
@@ -41,16 +37,19 @@ Test	t/get_ok-parms.t	/^sub Test::WWW::Mechanize::get {$/;"	s
 Test	t/get_ok-parms.t	/^sub Test::WWW::Mechanize::success { return 1; }$/;"	s
 Test	t/head_ok-parms.t	/^sub Test::WWW::Mechanize::head {$/;"	s
 Test	t/head_ok-parms.t	/^sub Test::WWW::Mechanize::success { return 1; }$/;"	s
+Test::WWW::Mechanize	Mechanize.pm	/^package Test::WWW::Mechanize;$/;"	p
+TestServer	t/TestServer.pm	/^package TestServer;$/;"	p
 _check_links_content	Mechanize.pm	/^sub _check_links_content {$/;"	s
 _check_links_status	Mechanize.pm	/^sub _check_links_status {$/;"	s
 _default_links_desc	Mechanize.pm	/^sub _default_links_desc {$/;"	s
 _format_links	Mechanize.pm	/^sub _format_links {$/;"	s
+_grep_hashes	Mechanize.pm	/^sub _grep_hashes {$/;"	s
 _lint_content_ok	Mechanize.pm	/^sub _lint_content_ok {$/;"	s
 _maybe_lint	Mechanize.pm	/^sub _maybe_lint {$/;"	s
 _tag_walk	Mechanize.pm	/^sub _tag_walk {$/;"	s
-_text	Mechanize.pm	/^sub _text {$/;"	s
 _unpack_args	Mechanize.pm	/^sub _unpack_args {$/;"	s
 add_test_fields	t/stuff_inputs.t	/^sub add_test_fields {$/;"	s
+autolint	Mechanize.pm	/^sub autolint {$/;"	s
 background	t/TestServer.pm	/^sub background {$/;"	s
 base_is	Mechanize.pm	/^sub base_is {$/;"	s
 base_like	Mechanize.pm	/^sub base_like {$/;"	s
@@ -65,12 +64,16 @@ field_checks	t/stuff_inputs.t	/^sub field_checks {$/;"	s
 follow_link_ok	Mechanize.pm	/^sub follow_link_ok {$/;"	s
 followable_links	Mechanize.pm	/^sub followable_links {$/;"	s
 get_ok	Mechanize.pm	/^sub get_ok {$/;"	s
+grep_inputs	Mechanize.pm	/^sub grep_inputs {$/;"	s
+grep_submits	Mechanize.pm	/^sub grep_submits {$/;"	s
 handle_request	hanger	/^sub handle_request {$/;"	s
 handle_request	t/TestServer.pm	/^sub handle_request {$/;"	s
 has_tag	Mechanize.pm	/^sub has_tag {$/;"	s
 has_tag_like	Mechanize.pm	/^sub has_tag_like {$/;"	s
 head_ok	Mechanize.pm	/^sub head_ok {$/;"	s
+hostname	t/TestServer.pm	/^sub hostname {$/;"	s
 html_lint_ok	Mechanize.pm	/^sub html_lint_ok {$/;"	s
+lacks_uncapped_inputs	Mechanize.pm	/^sub lacks_uncapped_inputs {$/;"	s
 link_content_like	Mechanize.pm	/^sub link_content_like {$/;"	s
 link_content_unlike	Mechanize.pm	/^sub link_content_unlike {$/;"	s
 link_status_is	Mechanize.pm	/^sub link_status_is {$/;"	s
@@ -87,10 +90,12 @@ put_ok	Mechanize.pm	/^sub put_ok {$/;"	s
 root	hanger	/^sub root {$/;"	s
 root	t/TestServer.pm	/^sub root {$/;"	s
 run	t/TestServer.pm	/^sub run {$/;"	s
+set_dispatch	t/TestServer.pm	/^sub set_dispatch {$/;"	s
 stop	t/TestServer.pm	/^sub stop {$/;"	s
 stuff_inputs	Mechanize.pm	/^sub stuff_inputs {$/;"	s
 submit_form_ok	Mechanize.pm	/^sub submit_form_ok {$/;"	s
 text_contains	Mechanize.pm	/^sub text_contains {$/;"	s
+text_lacks	Mechanize.pm	/^sub text_lacks {$/;"	s
 text_like	Mechanize.pm	/^sub text_like {$/;"	s
 text_unlike	Mechanize.pm	/^sub text_unlike {$/;"	s
 title_is	Mechanize.pm	/^sub title_is {$/;"	s
